--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
         "role": "Developer"
     }],
     "require": {
-        "php": "^5.6 || ^7.0",
-        "illuminate/console": "5.5.* || 5.6.*"
+        "php": "^5.6 || ^7.0"
     },
     "autoload": {
         "psr-4": {
